@@ -6833,6 +6833,101 @@ Get light enabled
 
 ---
 
+## RLGL - Matrix operations
+
+---
+
+> success = RL.rlMatrixMode( int mode )
+
+Choose the current matrix to be transformed
+
+- Failure return false
+- Success return true
+
+---
+
+> RL.rlPushMatrix()
+
+Push the current matrix to stack
+
+---
+
+> RL.rlPopMatrix()
+
+Pop latest inserted matrix from stack
+
+---
+
+> RL.rlLoadIdentity()
+
+Reset current matrix to identity matrix
+
+---
+
+> success = RL.rlTranslatef( Vector3 translation )
+
+Multiply the current matrix by a translation matrix
+
+- Failure return false
+- Success return true
+
+---
+
+> success = RL.rlRotatef( float angle, Vector3 rotation )
+
+Multiply the current matrix by a rotation matrix
+
+- Failure return false
+- Success return true
+
+---
+
+> success = RL.rlScalef( Vector3 scale )
+
+Multiply the current matrix by a scaling matrix
+
+- Failure return false
+- Success return true
+
+---
+
+> success = RL.rlMultMatrixf( Matrix matrix )
+
+Multiply the current matrix by another matrix
+
+- Failure return false
+- Success return true
+
+---
+
+> success = RL.rlFrustum( float left, float right, float bottom, float top, float znear, float zfar )
+
+Multiply the current matrix by a perspective matrix generated by parameters
+
+- Failure return false
+- Success return true
+
+---
+
+> success = RL.rlOrtho( float left, float right, float bottom, float top, float znear, float zfar )
+
+Multiply the current matrix by an orthographic matrix generated by parameters
+
+- Failure return false
+- Success return true
+
+---
+
+> success = RL.rlViewport( Rectangle viewport )
+
+Set the viewport area ( transformation from normalized device coordinates to window coordinates )
+NOTE: We store current viewport dimensions
+
+- Failure return false
+- Success return true
+
+---
+
 ## RLGL - Textures state
 
 ---
@@ -7021,6 +7116,34 @@ Disable line aliasing
 Get current OpenGL version
 
 - Success return int
+
+---
+
+## RLGL - Render batch management
+
+---
+
+> RL.rlDrawRenderBatchActive()
+
+Update and draw internal render batch
+
+---
+
+> overflow = RL.rlCheckRenderBatchLimit( int vCount )
+
+Check internal buffer overflow for a given number of vertex and force a rlRenderBatch draw call if required
+
+- Failure return nil
+- Success return bool
+
+---
+
+> success = RL.rlSetTexture( int id )
+
+Set current texture for render batch and check buffers limits
+
+- Failure return false
+- Success return true
 
 ---
 
