@@ -5549,6 +5549,88 @@ function RL.GetLightColor( light ) end
 ---@return any enabled 
 function RL.IsLightEnabled( light ) end
 
+-- RLGL - Matrix operations
+
+---Choose the current matrix to be transformed
+---- Failure return false
+---- Success return true
+---@param mode integer
+---@return any success 
+function RL.rlMatrixMode( mode ) end
+
+---Push the current matrix to stack
+---@return any RL.rlPushMatrix
+function  RL.rlPushMatrix() end
+
+---Pop latest inserted matrix from stack
+---@return any RL.rlPopMatrix
+function  RL.rlPopMatrix() end
+
+---Reset current matrix to identity matrix
+---@return any RL.rlLoadIdentity
+function  RL.rlLoadIdentity() end
+
+---Multiply the current matrix by a translation matrix
+---- Failure return false
+---- Success return true
+---@param translation table
+---@return any success 
+function RL.rlTranslatef( translation ) end
+
+---Multiply the current matrix by a rotation matrix
+---- Failure return false
+---- Success return true
+---@param angle number
+---@param rotation table
+---@return any success 
+function RL.rlRotatef( angle, rotation ) end
+
+---Multiply the current matrix by a scaling matrix
+---- Failure return false
+---- Success return true
+---@param scale table
+---@return any success 
+function RL.rlScalef( scale ) end
+
+---Multiply the current matrix by another matrix
+---- Failure return false
+---- Success return true
+---@param matrix table
+---@return any success 
+function RL.rlMultMatrixf( matrix ) end
+
+---Multiply the current matrix by a perspective matrix generated by parameters
+---- Failure return false
+---- Success return true
+---@param left number
+---@param right number
+---@param bottom number
+---@param top number
+---@param znear number
+---@param zfar number
+---@return any success 
+function RL.rlFrustum( left, right, bottom, top, znear, zfar ) end
+
+---Multiply the current matrix by an orthographic matrix generated by parameters
+---- Failure return false
+---- Success return true
+---@param left number
+---@param right number
+---@param bottom number
+---@param top number
+---@param znear number
+---@param zfar number
+---@return any success 
+function RL.rlOrtho( left, right, bottom, top, znear, zfar ) end
+
+---Set the viewport area ( transformation from normalized device coordinates to window coordinates )
+---NOTE: We store current viewport dimensions
+---- Failure return false
+---- Success return true
+---@param viewport table
+---@return any success 
+function RL.rlViewport( viewport ) end
+
 -- RLGL - Textures state
 
 ---Select and active a texture slot
@@ -5685,6 +5767,26 @@ function  RL.rlDisableSmoothLines() end
 ---- Success return int
 ---@return any version 
 function RL.rlGetVersion() end
+
+-- RLGL - Render batch management
+
+---Update and draw internal render batch
+---@return any RL.rlDrawRenderBatchActive
+function  RL.rlDrawRenderBatchActive() end
+
+---Check internal buffer overflow for a given number of vertex and force a rlRenderBatch draw call if required
+---- Failure return nil
+---- Success return bool
+---@param vCount integer
+---@return any overflow 
+function RL.rlCheckRenderBatchLimit( vCount ) end
+
+---Set current texture for render batch and check buffers limits
+---- Failure return false
+---- Success return true
+---@param id integer
+---@return any success 
+function RL.rlSetTexture( id ) end
 
 -- RLGL - Textures management
 
